@@ -1,6 +1,7 @@
 <!-- Syntax tokens -->
-<!ENTITY % tokens "KEYWORD1 | KEYWORD2 | KEYWORD3 | LABEL | COMMENT1 | COMMENT2
-	| LITERAL1 | LITERAL2 | OPERATOR | NULL" >
+<!ENTITY % tokens "NULL | COMMENT1 | COMMENT2 | LITERAL1 | LITERAL2
+	| CONSTANT | LABEL | KEYWORD1 | KEYWORD2 | KEYWORD3 | FUNCTION
+	| VARIABLE | DATATYPE | OPERATOR | DIGIT | INVALID" >
 
 <!-- Entities for attributes shared by multiple rules -->
 <!ENTITY % att-type 'TYPE ( %tokens; ) "NULL"' >
@@ -97,17 +98,24 @@
 	%att-at-line-start; >
 
 <!-- KEYWORDS element -->
-<!ELEMENT KEYWORDS ( KEYWORD1 | KEYWORD2 | KEYWORD3 | LABEL | COMMENT1 |
-	COMMENT2 | LITERAL1 | LITERAL2 | OPERATOR | NULL )+ >
+<!ELEMENT KEYWORDS ( NULL | COMMENT1 | COMMENT2 | LITERAL1 | LITERAL2 | CONSTANT
+	| LABEL | KEYWORD1 | KEYWORD2 | KEYWORD3 | FUNCTION | VARIABLE
+	| DATATYPE | OPERATOR | DIGIT | INVALID )+ >
 
 <!-- KEYWORDS children -->
-<!ELEMENT KEYWORD1 ( #PCDATA ) >
-<!ELEMENT KEYWORD2 ( #PCDATA ) >
-<!ELEMENT KEYWORD3 ( #PCDATA ) >
-<!ELEMENT LABEL ( #PCDATA ) >
+<!ELEMENT NULL ( #PCDATA ) >
 <!ELEMENT COMMENT1 ( #PCDATA ) >
 <!ELEMENT COMMENT2 ( #PCDATA ) >
 <!ELEMENT LITERAL1 ( #PCDATA ) >
 <!ELEMENT LITERAL2 ( #PCDATA ) >
+<!ELEMENT CONSTANT ( #PCDATA ) >
+<!ELEMENT LABEL ( #PCDATA ) >
+<!ELEMENT KEYWORD1 ( #PCDATA ) >
+<!ELEMENT KEYWORD2 ( #PCDATA ) >
+<!ELEMENT KEYWORD3 ( #PCDATA ) >
+<!ELEMENT FUNCTION ( #PCDATA ) >
+<!ELEMENT VARIABLE ( #PCDATA ) >
+<!ELEMENT DATATYPE ( #PCDATA ) >
 <!ELEMENT OPERATOR ( #PCDATA ) >
-<!ELEMENT NULL ( #PCDATA ) >
+<!ELEMENT DIGIT ( #PCDATA ) >
+<!ELEMENT INVALID ( #PCDATA ) >
