@@ -189,11 +189,16 @@ view.expandOnInput=no
 # Syntax styles
 view.style.comment1=style:i
 view.style.comment2=color:#990033 style:i
+view.style.literal1=color:#650099
+view.style.literal2=color:#650099 style:b
+view.style.constant=color:#650099 style:b
 view.style.keyword1=style:b
 view.style.keyword2=color:magenta
 view.style.keyword3=color:#009600
+view.style.function=color:#d27e00
+view.style.variable=color:magenta
+view.style.datatype=color:#009600
 view.style.label=color:#990033 style:b
-view.style.literal1=color:#650099
-view.style.literal2=color:#650099 style:b
 view.style.operator=style:b
+view.style.digit=color:#009191
 view.style.invalid=color:red style:b
