@@ -820,13 +820,18 @@ options.styles.gutterCurrentLineColor=Gutter current line
 options.styles.gutterBorderColor=Gutter border
 options.styles.comment1Style=Comment 1
 options.styles.comment2Style=Comment 2
-options.styles.literal1Style=String literal
-options.styles.literal2Style=Object literal
+options.styles.literal1Style=Literal 1
+options.styles.literal2Style=Literal 2
+options.styles.constantStyle=Constant
 options.styles.labelStyle=Label
 options.styles.keyword1Style=Keyword 1
 options.styles.keyword2Style=Keyword 2
 options.styles.keyword3Style=Keyword 3
+options.styles.functionStyle=Function
+options.styles.variableStyle=Variable
+options.styles.datatypeStyle=Data type
 options.styles.operatorStyle=Operator
+options.styles.digitStyle=Digit
 options.styles.invalidStyle=Invalid token
 options.filters.label=File Filters
 options.filters.name=Name
