@@ -30,96 +30,26 @@ package org.gjt.sp.jedit.syntax;
  */
 public class Token
 {
-	/**
-	 * Normal text token id. This should be used to mark
-	 * normal text.
-	 */
 	public static final byte NULL = 0;
-
-	/**
-	 * Comment 1 token id. This can be used to mark a comment.
-	 */
 	public static final byte COMMENT1 = 1;
-
-	/**
-	 * Comment 2 token id. This can be used to mark a comment.
-	 */
 	public static final byte COMMENT2 = 2;
-
-	
-	/**
-	 * Literal 1 token id. This can be used to mark a string
-	 * literal (eg, C mode uses this to mark "..." literals)
-	 */
 	public static final byte LITERAL1 = 3;
-
-	/**
-	 * Literal 2 token id. This can be used to mark an object
-	 * literal (eg, Java mode uses this to mark true, false, etc)
-	 */
 	public static final byte LITERAL2 = 4;
+	public static final byte CONSTANT = 5;
+	public static final byte LABEL = 6;
+	public static final byte KEYWORD1 = 7;
+	public static final byte KEYWORD2 = 8;
+	public static final byte KEYWORD3 = 9;
+	public static final byte FUNCTION = 10;
+	public static final byte VARIABLE = 11;
+	public static final byte DATATYPE = 12;
+	public static final byte OPERATOR = 13;
+	public static final byte DIGIT = 14;
+	public static final byte INVALID = 15;
 
-	/**
-	 * Label token id. This can be used to mark labels
-	 * (eg, C mode uses this to mark ...: sequences)
-	 */
-	public static final byte LABEL = 5;
-
-	/**
-	 * Keyword 1 token id. This can be used to mark a
-	 * keyword. This should be used for general language
-	 * constructs.
-	 */
-	public static final byte KEYWORD1 = 6;
-
-	/**
-	 * Keyword 2 token id. This can be used to mark a
-	 * keyword. This should be used for preprocessor
-	 * commands, or variables.
-	 */
-	public static final byte KEYWORD2 = 7;
-
-	/**
-	 * Keyword 3 token id. This can be used to mark a
-	 * keyword. This should be used for data types.
-	 */
-	public static final byte KEYWORD3 = 8;
-
-	/**
-	 * Operator token id. This can be used to mark an
-	 * operator. (eg, SQL mode marks +, -, etc with this
-	 * token type)
-	 */
-	public static final byte OPERATOR = 9;
-
-	/**
-	 * Invalid token id. This can be used to mark invalid
-	 * or incomplete tokens, so the user can easily spot
-	 * syntax errors.
-	 */
-	public static final byte INVALID = 10;
-
-	/**
-	 * The total number of defined token ids.
-	 */
-	public static final byte ID_COUNT = 11;
-
-	/**
-	 * The first id that can be used for internal state
-	 * in a token marker.
-	 */
+	public static final byte ID_COUNT = 16;
 	public static final byte INTERNAL_FIRST = 100;
-
-	/**
-	 * The last id that can be used for internal state
-	 * in a token marker.
-	 */
 	public static final byte INTERNAL_LAST = 126;
-
-	/**
-	 * The token type, that along with a length of 0
-	 * marks the end of the token list.
-	 */
 	public static final byte END = 127;
 
 	/**
@@ -160,6 +90,9 @@ public class Token
 /*
  * ChangeLog:
  * $Log$
+ * Revision 1.13  2000/04/06 13:09:46  sp
+ * More token types added
+ *
  * Revision 1.12  1999/12/13 03:40:30  sp
  * Bug fixes, syntax is now mostly GPL'd
  *
